codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__agents_settings_cached_overridden.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Agents
  Capabilities refreshed.

  1. Refresh capabilities                      Re-check install, sign-in, version, models, and
                                               effort support.
  •  Antigravity / Gemini                      installed • signed in • agy 1.2.3 • cached
  2. antigravity (enabled) (current)           provider default • provider `antigravity`
       model default: gemini-3-pro (disabled)  Bare-selector provider model. (disabled: A higher-
                                               precedence setting controls this model.)
  3.   effort default: high                    Used when a spawn call does not choose effort.
› 4. antigravity-gemini-3-pro (disabled)       Command: `antigravity`
  5.   effort default: high                    Used when a spawn call does not choose effort.

  Press enter to confirm or esc to go back
