codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__agents_settings_cancelling.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Agents
  Cancelling capability refresh…

› •  Cancelling capability refresh…      Waiting for the terminal provider
                                         snapshot.
  •  No provider capabilities available  Refresh to probe installed external-
                                         agent CLIs.

  Press enter to confirm or esc to go back
