codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__agents_settings_empty_refreshing.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Agents
  Refreshing local capabilities in the background…

› 1. Cancel capability refresh           Stop the bounded local provider
                                         probes.
  •  No provider capabilities available  Refresh to probe installed external-
                                         agent CLIs.

  Press enter to confirm or esc to go back
