codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__agents_settings_fresh_success.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Agents
  Capabilities refreshed.

  1. Refresh capabilities             Re-check install, sign-in, version, models, and effort
                                      support.
  •  Antigravity / Gemini             installed • signed in • agy 1.2.3 • fresh
› 2. antigravity (enabled) (current)  Command: `antigravity`
  3.   model default: gemini-3-pro    Bare-selector provider model.
  4.   effort default: high           Used when a spawn call does not choose effort.

  Press enter to confirm or esc to go back
