codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__agents_settings_missing_and_auth_failed.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Agents
  Configure the external selectors available to spawned agents.

  1. Refresh capabilities                   Re-check install, sign-in, version, models, and effort
                                            support.
  •  Claude                                 not installed • sign-in unknown • version unknown •
                                            not checked
› 2. claude-sonnet-4.6 (enabled) (current)  Claude CLI was not found on PATH.
  •  Antigravity / Gemini                   installed • sign-in required • version unknown • not
                                            checked
  3. antigravity (enabled) (current)        provider default • provider `antigravity`

  Press enter to confirm or esc to go back
