codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__background_auto_review_failure_history.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: rendered
---
✗ Background Review failed for base branch main · run-background-failed · review model unavailable
