codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__background_auto_review_status_history.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: rendered
---
○ Auto Review running for uncommitted changes · run-background-1

✔ Auto Review completed for uncommitted changes · run-background-1
